# race-figgie

./: .gitignore  dune-project  requirements.txt  run.sh
client/: best_orders.ml  dune  exchange.ml  index.html  landing_state.ml  landing_state.mli  main.ml  race.ml  race_page.ml  results_page.ml  styles.css  username.ml
lib/: client_state.ml  client_state.mli  current_phase.mli  dune  fill.ml  fill.mli  game_state.ml  game_state.mli  main.ml  order.ml  order.mli  player.ml  player.mli  race.ml  race.mli  racer.ml  racer.mli  rpcs.ml  rpcs.mli  trade.ml  trade.mli  ui.ml  ui.mli
server/: dune  main.ml  server.ml  server.mli
test/: dune
